crates/mold_completion/tests/snapshots/snapshots__insert_returning_alias_columns.snap
---
source: crates/mold_completion/tests/snapshots.rs
expression: render_completion(&result)
---
context: ColumnRef { table: Some("users"), tables: ["users"] }
is_incomplete: false
data | Column | detail=users (jsonb) | insert=-
id | Column | detail=users (integer) | insert=-
name | Column | detail=users (text) | insert=-
