crates/mold_completion/tests/snapshots/snapshots__join_alias_columns.snap
---
source: crates/mold_completion/tests/snapshots.rs
assertion_line: 88
expression: render_completion(&result)
---
context: ColumnRef { table: Some("users"), tables: ["users", "orders"] }
is_incomplete: false
data | Column | detail=users (jsonb) | insert=-
id | Column | detail=users (integer) | insert=-
name | Column | detail=users (text) | insert=-
